--- a/JavaScript/Countdown Timer/index.html
+++ b/JavaScript/Countdown Timer/index.html
@@ -12,20 +12,20 @@
     <!-- <img src="./Images/New Years.jpg" alt="bg-image"> -->
     <h1>New Years Eve</h1>
     <div class="countdown-container">
-      <div class="days-c">
-        <p class="" big-text id="days"></p>
+      <div class="countdown-element days-c">
+        <p class="big-text" id="days">0</p>
         <span>days</span>
       </div>
-      <div class="hours-c">
-        <p class="" big-text id="hours"></p>
+      <div class="countdown-element hours-c">
+        <p class="big-text" id="hours">0</p>
         <span>hours</span>
       </div>
-      <div class="minutes-c">
-        <p class="" big-text id="minutes"></p>
+      <div class="countdown-element minutes-c">
+        <p class="big-text" id="minutes">0</p>
         <span>minutes</span>
       </div>
-      <div class="seconds-c">
-        <p class="" big-text id="seconds"></p>
+      <div class="countdown-element seconds-c">
+        <p class="big-text" id="seconds">0</p>
         <span>seconds</span>
       </div>
     </div>
