Add countdown function

--- a/JavaScript/Countdown Timer/index.html
+++ b/JavaScript/Countdown Timer/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countdown Timer</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <!-- <img src="./Images/New Years.jpg" alt="bg-image"> -->
